Fix non-working menu button on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1558,6 +1558,10 @@ div#footer-bar ul li{
         margin:1.5em 15%;
         width:70%;
     }
+    div#name1,
+    div#name2 {
+        width:80%;
+    }
 }
 
 /** ---------------------------------------------- 480 ---------------------------------------------- **/
